fix overflow-x property in style.css

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html{
     text-align: center;
     font-family:"DM Sans", Geneva, Verdana, sans-serif;
     font-size: 18px;
+    overflow-x: hidden;
 }
 
 body{
@@ -18,6 +19,7 @@ body{
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 main{
